# ccmath

./: CMakeLists.txt  README.md
include/: cc_math.h  cc_matrix.h  cc_quaternion.h  cc_vector.h
src/: cc_math.c  cc_matrix.c  cc_matrix2x2.c  cc_matrix2x3.c  cc_matrix3x2.c  cc_matrix3x3.c  cc_matrix3x6.c  cc_matrix4x8.c  cc_quaternion.c  cc_vector2.c  cc_vector3.c
unit_test/: main.c
